Fix blurred text in section counter after fadeIn animation

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -136,7 +136,7 @@ $overlap: 8.6rem;
  		&::before
  		{
  			opacity: 0.2;
-			transform: rotate(-90deg) translate3d(0,0,0);
+			transform: rotate(-90deg);
  		}
 
  		&::after
